--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script
+  src="https://www.paypal.com/sdk/js?client-id=AZoq2cIhLZNijQVz57tlQBSkMnMZ-lTVVqOK7y6hx-F8pODOqZIXOW6YxH9pU_Bzil4TNCRIOJWCbGb4">
+</script>  
 </head>
 <body class="mat-typography">
   <app-root></app-root>
